--- a/subsubsection_CV_Scores_in_Classification__.tex
+++ b/subsubsection_CV_Scores_in_Classification__.tex
@@ -1,7 +1,7 @@
 \subsubsection{CV Scores in Classification Learning}
 
-In a binary classification notation,
- A contingency table would then count the amount of samples that fall into one of the four groups derived from the comparison between the model's expectation and the observed data. 
+In binary classification, the contingency table evaluates the 
+would then count the amount of samples that fall into one of the four groups derived from the comparison between the model's expectation and the observed data. 
 
 In a simple binary classification case, the model $\hat{f}$ is fit  from the data with a CV procedure. Every sample has a target value $y$ and a predicted outcome $\hat{y}$ and there are only four possible outcomes for these two variables.  We can express the models' target outcomes $\hat{y}$ into the positive ($\hat{P}$) or negative ($\hat{N}$) categories and the same with actual target data into the positive ($P$) or negative ($N$) categories. 
 
